# datapy-etl

./: .gitignore  pyproject.toml
fast_datapy_etl/drivers/: __init__.py  driver.py  factory.py
fast_datapy_etl/drivers/base/: __init__.py  constants.py  driver.py  errors.py  factory.py
fast_datapy_etl/drivers/postgresql/: constants.py  driver.py
fast_datapy_etl/drivers/utils/: utils.py
tests/: test_fast_datapy_etl.py
tests/drivers/postgresql/: test_postgresql_driver.py
