[tool.poetry]
name = "fast-datapy-etl"
version = "0.1.1"
description = ""
authors = ["Agajanth <santiagoisaza0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg = "^3.1.1"
pyodbc = "^4.0.34"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
